[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/score_panel/score_panel_ui.gd" type="Script" id=2]

[node name="VBoxContainer" type="MarginContainer"]
margin_right = 500.0
margin_bottom = 500.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 504.0
margin_bottom = 500.0
color = Color( 0.301961, 0.301961, 0.301961, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 504.0
margin_bottom = 500.0
alignment = 1

[node name="label" type="Label" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 504.0
margin_bottom = 162.0
rect_min_size = Vector2( 250, 40 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 1 )
text = "Time"
align = 1

[node name="time_left" type="Label" parent="VBoxContainer"]
margin_top = 166.0
margin_right = 504.0
margin_bottom = 226.0
rect_min_size = Vector2( 250, 40 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 1 )
text = "00"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 230.0
margin_right = 504.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 274.0
margin_right = 504.0
margin_bottom = 334.0

[node name="label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 250.0
margin_bottom = 60.0
rect_min_size = Vector2( 250, 40 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 1 )
text = "Team 1"
align = 1

[node name="label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 60.0
rect_min_size = Vector2( 250, 40 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 1 )
text = "Team 2"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 338.0
margin_right = 504.0
margin_bottom = 398.0

[node name="score_team_1" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 250.0
margin_bottom = 60.0
rect_min_size = Vector2( 250, 40 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1

[node name="score_team_2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 60.0
rect_min_size = Vector2( 250, 40 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
